--- a/src/main/resources/assets/betternether/lang/pl_pl.json
+++ b/src/main/resources/assets/betternether/lang/pl_pl.json
@@ -302,7 +302,7 @@
 	"block.betternether.roof_tile_wart_slab": "Płyta z brodawczanych dachówek",
 	
 	"block.betternether.taburet_reeds": "Trzcinowy taboret",
-	"block.betternether.taburet_stalagnate": "Stalagnatowcoy taboret",
+	"block.betternether.stalagnate_taburet": "Stalagnatowcoy taboret",
 	"block.betternether.taburet_willow": "Wierzbowy taboret",
 	"block.betternether.taburet_wart": "Brodawczanowy taboret",
 	"block.betternether.taburet_cincinnasite": "Cyncenazytowy taboret",
@@ -312,7 +312,7 @@
 	"block.betternether.wart_ladder": "Brodawczanowa drabina",
 	
 	"block.betternether.chair_reeds": "Trzcinowe krzesło",
-	"block.betternether.chair_stalagnate": "Stalagnatowcowa drabina",
+	"block.betternether.stalagnate_chair": "Stalagnatowcowa drabina",
 	"block.betternether.chair_willow": "Wierzbowa drabina",
 	"block.betternether.chair_wart": "Brodawczanowa drabina",
 	"block.betternether.chair_cincinnasite": "Cyncenazytowa drabina",
