--- a/src/main/resources/assets/betternether/lang/zh_cn.json
+++ b/src/main/resources/assets/betternether/lang/zh_cn.json
@@ -324,7 +324,7 @@
 	"block.betternether.roof_tile_wart_slab": "下界疣屋面瓦台阶",
 	
 	"block.betternether.taburet_reeds": "下界芦苇凳子",
-	"block.betternether.taburet_stalagnate": "石结木凳子",
+	"block.betternether.stalagnate_taburet": "石结木凳子",
 	"block.betternether.taburet_willow": "下界柳木凳子",
 	"block.betternether.taburet_wart": "下界疣凳子",
 	"block.betternether.taburet_cincinnasite": "辛辛那金凳子",
@@ -334,7 +334,7 @@
 	"block.betternether.wart_ladder": "下界疣木梯子",
 	
 	"block.betternether.chair_reeds": "下界芦苇椅子",
-	"block.betternether.chair_stalagnate": "石结木椅子",
+	"block.betternether.stalagnate_chair": "石结木椅子",
 	"block.betternether.chair_willow": "下界柳木椅子",
 	"block.betternether.chair_wart": "下界疣椅子",
 	"block.betternether.chair_cincinnasite": "辛辛那金椅子",
@@ -351,7 +351,7 @@
 	"block.betternether.giant_mold_sapling": "巨霉菌幼苗",
 	
 	"block.betternether.bar_stool_reeds": "下界芦苇高脚凳",
-	"block.betternether.bar_stool_stalagnate": "石结木高脚凳",
+	"block.betternether.stalagnate_bar_stool": "石结木高脚凳",
 	"block.betternether.bar_stool_willow": "下界柳木高脚凳",
 	"block.betternether.bar_stool_wart": "下界疣高脚凳",
 	"block.betternether.bar_stool_cincinnasite": "辛辛那金高脚凳",
