--- a/src/main/resources/assets/betternether/lang/de_de.json
+++ b/src/main/resources/assets/betternether/lang/de_de.json
@@ -324,7 +324,7 @@
   "block.betternether.roof_tile_wart_slab": "Warzenschindelstufe",
 
   "block.betternether.taburet_reeds": "Schilfhocker",
-  "block.betternether.taburet_stalagnate": "Stalagnathocker",
+  "block.betternether.stalagnate_taburet": "Stalagnathocker",
   "block.betternether.taburet_willow": "Weidenhocker",
   "block.betternether.taburet_wart": "Warzenhocker",
   "block.betternether.taburet_cincinnasite": "Cincinnasithocker",
@@ -334,7 +334,7 @@
   "block.betternether.wart_ladder": "Warzenleiter",
 
   "block.betternether.chair_reeds": "Schilfstuhl",
-  "block.betternether.chair_stalagnate": "Stalagnatstuhl",
+  "block.betternether.stalagnate_chair": "Stalagnatstuhl",
   "block.betternether.chair_willow": "Weidenstuhl",
   "block.betternether.chair_wart": "Warzenstuhl",
   "block.betternether.chair_cincinnasite": "Cincinnasitstuhl",
@@ -351,7 +351,7 @@
   "block.betternether.giant_mold_sapling": "Riesenschimmel Setzling",
 
   "block.betternether.bar_stool_reeds": "Schilfbarhocker",
-  "block.betternether.bar_stool_stalagnate": "Stalagnatbarhocker",
+  "block.betternether.stalagnate_bar_stool": "Stalagnatbarhocker",
   "block.betternether.bar_stool_willow": "Weidenbarhocker",
   "block.betternether.bar_stool_wart": "Warzenbarhocker",
   "block.betternether.bar_stool_cincinnasite": "Cincinnasitbarhocker",
