--- a/src/main/resources/assets/betternether/lang/ru_ru.json
+++ b/src/main/resources/assets/betternether/lang/ru_ru.json
@@ -324,7 +324,7 @@
 	"block.betternether.roof_tile_wart_slab": "Плита из наростовой черепица",
 	
 	"block.betternether.taburet_reeds": "Тростниковый табурет",
-	"block.betternether.taburet_stalagnate": "Сталагнатовый табурет",
+	"block.betternether.stalagnate_taburet": "Сталагнатовый табурет",
 	"block.betternether.taburet_willow": "Ивовый табурет",
 	"block.betternether.taburet_wart": "Наростовый табурет",
 	"block.betternether.taburet_cincinnasite": "Цинцинназитовый табурет",
@@ -334,7 +334,7 @@
 	"block.betternether.wart_ladder": "Наростовая лестница",
 	
 	"block.betternether.chair_reeds": "Тростниковый стул",
-	"block.betternether.chair_stalagnate": "Сталагнатовый стул",
+	"block.betternether.stalagnate_chair": "Сталагнатовый стул",
 	"block.betternether.chair_willow": "Ивовый стул",
 	"block.betternether.chair_wart": "Наростовый стул",
 	"block.betternether.chair_cincinnasite": "Цинцинназитовый стул",
@@ -351,7 +351,7 @@
 	"block.betternether.giant_mold_sapling": "Саженец гигантской плесени",
 	
 	"block.betternether.bar_stool_reeds": "Тростниковый барный стул",
-	"block.betternether.bar_stool_stalagnate": "Сталагнатовый барный стул",
+	"block.betternether.stalagnate_bar_stool": "Сталагнатовый барный стул",
 	"block.betternether.bar_stool_willow": "Ивовый барный стул",
 	"block.betternether.bar_stool_wart": "Наростовый барный стул",
 	"block.betternether.bar_stool_cincinnasite": "Цинцинназитовый барный стул",
