--- a/src/main/resources/assets/betternether/lang/pt_br.json
+++ b/src/main/resources/assets/betternether/lang/pt_br.json
@@ -187,7 +187,7 @@
 	"block.betternether.stalagnate_door": "Stalagnate Door",
 	"block.betternether.stalagnate_trapdoor": "Stalagnate Trapdoor",
 	"block.betternether.stalagnate_seed": "Stalagnate Seed",
-	"block.betternether.wart_seed": "Wart Seed",
+	"block.betternether.wart_seed": "Primórdia de fungo do Nether",
 	
 	"block.betternether.eye_vine": "Trepadeira de globo ocular",
 	"block.betternether.black_apple": "Arbusto de maçã negra",
@@ -304,24 +304,24 @@
 	"block.betternether.wall_mushroom_brown": "Cogumelo marrom de parede",
 	"block.betternether.wall_mushroom_red": "Cogumelo vermelho de parede",
 	
-	"block.betternether.roof_tile_reeds": "Reeds Roof Tile",
-	"block.betternether.roof_tile_reeds_stairs": "Reeds Roof Tile Stairs",
-	"block.betternether.roof_tile_reeds_slab": "Reeds Roof Tile Slab",
+	"block.betternether.roof_tile_reeds": "Telhas de junco do Nether",
+	"block.betternether.roof_tile_reeds_stairs": "Escadas de telhas de junco do Nether",
+	"block.betternether.roof_tile_reeds_slab": "Laje de telhas de junco do Nether",
 	"block.betternether.stalagnate_roof": "Stalagnate Roof Tile",
 	"block.betternether.stalagnate_roof_stairs": "Stalagnate Roof Tile Stairs",
 	"block.betternether.stalagnate_roof_slab": "Stalagnate Roof Tile Slab",
-	"block.betternether.roof_tile_nether_bricks": "Nether Bricks Roof Tile",
-	"block.betternether.roof_tile_nether_bricks_stairs": "Nether Bricks Roof Tile Stairs",
-	"block.betternether.roof_tile_nether_bricks_slab": "Nether Bricks Roof Tile Slab",
+	"block.betternether.roof_tile_nether_bricks": "Telhas do Nether",
+	"block.betternether.roof_tile_nether_bricks_stairs": "Escadas de telhas do Nether",
+	"block.betternether.roof_tile_nether_bricks_slab": "Laje de telhas do Nether",
 	"block.betternether.roof_tile_cincinnasite": "Cincinnasite Roof Tile",
 	"block.betternether.roof_tile_cincinnasite_stairs": "Cincinnasite Roof Tile Stairs",
 	"block.betternether.roof_tile_cincinnasite_slab": "Cincinnasite Roof Tile Slab",
-	"block.betternether.willow_roof": "Willow Roof Tile",
-	"block.betternether.willow_roof_stairs": "Willow Roof Tile Stairs",
-	"block.betternether.willow_roof_slab": "Willow Roof Tile Slab",
-	"block.betternether.roof_tile_wart": "Wart Roof Tile",
-	"block.betternether.roof_tile_wart_stairs": "Wart Roof Tile Stairs",
-	"block.betternether.roof_tile_wart_slab": "Wart Roof Tile Slab",
+	"block.betternether.willow_roof": "Telhas de  infra-salgueiro",
+	"block.betternether.willow_roof_stairs": "Escadas de telhas de infra-salgueiro",
+	"block.betternether.willow_roof_slab": "Laje de telhas de infra-salgueiro",
+	"block.betternether.roof_tile_wart": "Telhas de fungo do Nether",
+	"block.betternether.roof_tile_wart_stairs": "Escadas de telhas de fungo do Nether",
+	"block.betternether.roof_tile_wart_slab": "Laje de telhas de fungo do Nether",
 	
 	"block.betternether.taburet_reeds": "Reeds Stool",
 	"block.betternether.stalagnate_taburet": "Stalagnate Stool",
@@ -330,8 +330,8 @@
 	"block.betternether.taburet_cincinnasite": "Cincinnasite Stool",
 	
 	"block.betternether.stalagnate_ladder": "Stalagnate Ladder",
-	"block.betternether.willow_ladder": "Willow Ladder",
-	"block.betternether.wart_ladder": "Wart Ladder",
+	"block.betternether.willow_ladder": "Escada de mão de infra-salgueiro",
+	"block.betternether.wart_ladder": "Escada de mão de fungo do Nether",
 	
 	"block.betternether.chair_reeds": "Reeds Chair",
 	"block.betternether.stalagnate_chair": "Stalagnate Chair",
@@ -340,15 +340,15 @@
 	"block.betternether.chair_cincinnasite": "Cincinnasite Chair",
 	
 	"block.betternether.stalagnate_stripped_log": "Stripped Stalagnate Log",
-	"block.betternether.willow_stripped_log": "Stripped Willow Log",
-	"block.betternether.striped_log_wart": "Stripped Wart Log",
+	"block.betternether.willow_stripped_log": "Tronco de infra-salgueiro descascado",
+	"block.betternether.striped_log_wart": "Caule de fungo do Nether descascado",
 	
 	"block.betternether.stalagnate_stripped_bark": "Stripped Stalagnate Wood",
-	"block.betternether.willow_stripped_bark": "Stripped Willow Wood",
-	"block.betternether.striped_bark_wart": "Stripped Wart Wood",
+	"block.betternether.willow_stripped_bark": "Madeira de infra-salgueiro descascada",
+	"block.betternether.striped_bark_wart": "Hifas de fungo do Nether descascadas",
 	
-	"block.betternether.giant_mold": "Giant Mold",
-	"block.betternether.giant_mold_sapling": "Giant Mold Sapling",
+	"block.betternether.giant_mold": "Mofo gigante",
+	"block.betternether.giant_mold_sapling": "Muda de mofo gigante",
 	
 	"block.betternether.bar_stool_reeds": "Reed Bar Stool",
 	"block.betternether.stalagnate_bar_stool": "Stalagnate Bar Stool",
@@ -358,11 +358,11 @@
 	
 	"biome.betternether.gravel_desert": "Deserto de cascalho",
 	"biome.betternether.nether_jungle": "Selva do Nether",
-	"biome.betternether.wart_forest": "Floresta de fungos",
+	"biome.betternether.wart_forest": "Floresta de fungos do Nether",
 	"biome.betternether.nether_grasslands": "Nether Grasslands",
 	"biome.betternether.nether_mushroom_forest": "Floresta de cogumelos do Nether",
-	"biome.betternether.nether_mushroom_forest_edge": "Margem da floresta de goumelos do Nether",
-	"biome.betternether.wart_forest_edge": "Margem da floresta de fungos",
+	"biome.betternether.nether_mushroom_forest_edge": "Margem da floresta de cogumelos do Nether",
+	"biome.betternether.wart_forest_edge": "Margem da floresta de fungos do Nether",
 	"biome.betternether.sulfuric_bone_reef": "Recife ósseo sulfúrico",
 	"biome.betternether.bone_reef": "Recife ósseo",
 	"biome.betternether.poor_grasslands": "Prados estéreis",
@@ -379,23 +379,23 @@
 	"biome.betternether.old_swampland": "Pântano do Nether antigo",
 	"biome.betternether.flooded_deltas": "Deltas inundadas",
 	
-	"block.betternether.mushroom_fir": "Mushroom Fir",
-	"block.betternether.mushroom_fir_sapling": "Mushroom Fir Sapling",
-	"block.betternether.mushroom_fir_stem": "Mushroom Fir Stem",
-	"block.betternether.mushroom_fir_log": "Mushroom Fir Log",
-	"block.betternether.mushroom_fir_wood": "Mushroom Fir Wood",
-	"block.betternether.striped_log_mushroom_fir": "Stripped Mushroom Fir Log",
-	"block.betternether.striped_wood_mushroom_fir": "Stripped Mushroom Fir Wood",
-	"block.betternether.mushroom_fir_planks": "Mushroom Fir Planks",
-	"block.betternether.mushroom_fir_stairs": "Mushroom Fir Stairs",
-	"block.betternether.mushroom_fir_slab": "Mushroom Fir Slab",
-	"block.betternether.mushroom_fir_fence": "Mushroom Fir Fence",
-	"block.betternether.mushroom_fir_gate": "Mushroom Fir Gate",
-	"block.betternether.mushroom_fir_button": "Mushroom Fir Button",
-	"block.betternether.mushroom_fir_plate": "Mushroom Fir Plate",
-	"block.betternether.mushroom_fir_trapdoor": "Mushroom Fir Trapdoor",
-	"block.betternether.mushroom_fir_door": "Mushroom Fir Door",
-	"block.betternether.mushroom_fir_ladder": "Mushroom Fir Ladder",
+	"block.betternether.mushroom_fir": "Cogumelo-abeto grande",
+	"block.betternether.mushroom_fir_sapling": "Cogumelo-abeto",
+	"block.betternether.mushroom_fir_stem": "Talo de cogumelo-abeto",
+	"block.betternether.mushroom_fir_log": "Tora de cogumelo-abeto",
+	"block.betternether.mushroom_fir_wood": "Hifas de cogumelo-abeto",
+	"block.betternether.striped_log_mushroom_fir": "Tora de cogumelo-abeto descascada",
+	"block.betternether.striped_wood_mushroom_fir": "Hifas de cogumelo-abeto descascadas",
+	"block.betternether.mushroom_fir_planks": "Tábuas de cogumelo-abeto",
+	"block.betternether.mushroom_fir_stairs": "Escadas de cogumelo-abeto",
+	"block.betternether.mushroom_fir_slab": "Laje de cogumelo-abeto",
+	"block.betternether.mushroom_fir_fence": "Cerca de cogumelo-abeto",
+	"block.betternether.mushroom_fir_gate": "Portão de cogumelo-abeto",
+	"block.betternether.mushroom_fir_button": "Botão de cogumelo-abeto",
+	"block.betternether.mushroom_fir_plate": "Placa de pressão de cogumelo-abeto",
+	"block.betternether.mushroom_fir_trapdoor": "Alçapão de cogumelo-abeto",
+	"block.betternether.mushroom_fir_door": "Porta de cogumelo-abeto",
+	"block.betternether.mushroom_fir_ladder": "Escada de mão de cogumelo-abeto",
 	
 	"block.betternether.chair_mushroom_fir": "Mushroom Fir Chair",
 	"block.betternether.taburet_mushroom_fir": "Mushroom Fir Stool",
@@ -519,8 +519,8 @@
 	
 	"item.betternether.cincinnasite_hoe": "Cincinnasite Hoe",
 	"item.betternether.cincinnasite_hoe_diamond": "Cincinnasite-Diamond Hoe",
-	"item.betternether.nether_ruby_hoe": "Nether Ruby Hoe",
-	"item.betternether.nether_ruby_hammer": "Nether Ruby Hammer",
+	"item.betternether.nether_ruby_hoe": "Enchada de rubi do Nether",
+	"item.betternether.nether_ruby_hammer": "Martelo de rubi do Nether",
 	
 	"config.betternether.config": "Config. do Better Nether",
 	"config.betternether.mod_reload": "§b§lYou need to restart Minecraft to apply this changes!",
@@ -549,7 +549,7 @@
 	"block.betternether.crafting_table_wart": "Bancada de fungo do Nether",
 	"block.betternether.rubeus_crafting_table": "Rubeus Crafting Table",
 	"block.betternether.crafting_table_mushroom": "Bancada de cogumelo",
-	"block.betternether.crafting_table_mushroom_fir": "Mushroom Fir Crafting Table",
+	"block.betternether.crafting_table_mushroom_fir": "Bancada de cogumelo-abeto",
 	
 	"block.betternether.stalagnate_chest": "Stalagnate Chest",
 	"block.betternether.chest_reed": "Baú de junco do Nether",
@@ -557,7 +557,7 @@
 	"block.betternether.chest_wart": "Baú de fungo do Nether",
 	"block.betternether.rubeus_chest": "Rubeus Chest",
 	"block.betternether.chest_mushroom": "Baú de cogumelo",
-	"block.betternether.chest_mushroom_fir": "Mushroom Fir Chest",
+	"block.betternether.chest_mushroom_fir": "Baú de cogumelo-abeto",
 	
 	"block.betternether.chest_crimson": "Baú carmesim",
 	"block.betternether.chest_warped": "Baú distorcido",
@@ -572,7 +572,7 @@
 	"block.betternether.sign_wart": "Placa de fungo do Nether",
 	"block.betternether.rubeus_sign": "Rubeus Sign",
 	"block.betternether.sign_mushroom": "Placa de cogumelo",
-	"block.betternether.sign_mushroom_fir": "Mushroom Fir Sign",
+	"block.betternether.sign_mushroom_fir": "Placa de cogumelo-abeto",
 	
 	"block.betternether.stalagnate_barrel": "Stalagnate Barrel",
 	"block.betternether.barrel_reed": "Barril de junco do Nether",
@@ -580,7 +580,7 @@
 	"block.betternether.barrel_wart": "Barril de fungo do Nether",
 	"block.betternether.rubeus_barrel": "Rubeus Barrel",
 	"block.betternether.barrel_mushroom": "Barril de cogumelo",
-	"block.betternether.barrel_mushroom_fir": "Mushroom Fir Barrel",
+	"block.betternether.barrel_mushroom_fir": "Barril de cogumelo-abeto",
 	
 	"block.betternether.barrel_crimson": "Barril carmesim",
 	"block.betternether.barrel_warped": "Barril distorcido",
